--- a/Dairy_Care_System/templates/login.html
+++ b/Dairy_Care_System/templates/login.html
@@ -25,7 +25,7 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="username">Name / Email Id</label>
-                    <input type="text" id="username" name="username" placeholder="Enter your username or email id">
+                    <input type="text" id="username" name="username" placeholder="Enter your name or email id">
                     <div class="error-message" id="usernameError"></div>
                 </div>
                 <div class="form-group">
