--- a/Dairy_Care_System/dairy/static/css/custproductslist.css
+++ b/Dairy_Care_System/dairy/static/css/custproductslist.css
@@ -139,3 +139,31 @@ h2 {
     color: #888;
     font-size: 0.85em;
 }
+
+/* Style for search bar */
+.search-bar-container {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.search-bar {
+    padding: 10px;
+    width: 60%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.search-button {
+    padding: 10px 20px;
+    background-color: #797f00;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.search-button:hover {
+    background-color: #105314;
+}
