--- a/Dairy_Care_System/dairy/static/css/editproduct.css
+++ b/Dairy_Care_System/dairy/static/css/editproduct.css
@@ -237,3 +237,32 @@ h2 {
 .btn-cancel:hover {
     background-color: #c82333;
 }
+
+/* Style for search bar */
+.search-bar-container {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.search-bar {
+    padding: 10px;
+    width: 60%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.search-button {
+    padding: 10px 20px;
+    background-color: #797f00;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.search-button:hover {
+    background-color: #105314;
+}
+
