--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -13,61 +13,75 @@
     </style>
 </head>
 <body>
-    <!-- <a href="{% url 'home' %}" class="home-link">
-        <img src="{% static 'images/homeblack.jpg' %}" alt="Home">
-    </a> -->
 
-<!-- Navigation Bar-->
-<ul>
-    <div class="header">
-        <!-- Greeting with username on the left
-        <div class="nav-item left">
-            <li><b>Hi, {{ username }}</b></li>
-        </div>   -->
-        
-        <div class="nav-item">
-            <li><b><a href="{% url 'reguserlist' 'all' %}">Users list</a></b></li>
-        </div>
-        <div class="nav-item">
-            <li><b><a href="{% url 'productslist' %}">Products list</a></b></li>
-        </div>
-        <div class="nav-item">
-            <li><b><a href="#">Animals list</a></b></li>
-        </div>
-        <div class="nav-item">
-            <li><b><a href="#">Milk details</a></b></li>
-        </div>
-        <div class="nav-item">
-            <li><b><a href="#">Feedback Review</a></b></li>
-        </div>
-        <div class="nav-item">
-            <li>
-                <b><a href="#">{{ username }}</a></b>
-                <div class="dropdown-content">
-                    <a href="{% url 'userprofile' %}">Profile</a>
-                    <a href="{% url 'logout' %}">Logout</a>
-                </div>
-            </li>
-        </div>
+    <!-- Side Navigation -->
+    <div id="mySidenav" class="sidenav">
+        <a>Hi! {{ username }}</a><br><br>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br>
+        <a href="{% url 'reguserlist' 'all' %}">Users List</a><br>
+        <a href="{% url 'productslist' %}">Products List</a><br>
+        <a href="{% url 'animalslist' %}">Animals List</a><br>
+        <a href="#">Milk Details</a><br>
+        <a href="#">Feedback Review</a><br>
     </div>
-</ul>
 
+    <!-- Navigation Bar-->
+    <ul>
+        <div class="header">
+            <!-- Hamburger Icon -->
+            <span class="hamburger" onclick="openNav()">&#9776;</span>
+            
+            <!-- <div class="nav-item">
+                <li><b><a href="{% url 'reguserlist' 'all' %}">Users list</a></b></li>
+            </div>
+            <div class="nav-item">
+                <li><b><a href="{% url 'productslist' %}">Products list</a></b></li>
+            </div>
+            <div class="nav-item">
+                <li><b><a href="{% url 'animalslist' %}">Animals list</a></b></li>
+            </div>
+            <div class="nav-item">
+                <li><b><a href="#">Milk details</a></b></li>
+            </div>
+            <div class="nav-item">
+                <li><b><a href="#">Feedback Review</a></b></li>
+            </div> -->
+            <div class="nav-item">
+                <li>
+                    <b><a href="#">{{ username }}</a></b>
+                    <div class="dropdown-content">
+                        <a href="{% url 'userprofile' %}">Profile</a>
+                        <a href="{% url 'logout' %}">Logout</a>
+                    </div>
+                </li>
+            </div>
+        </div>
+    </ul>
 
-<center>
-    <!-- <h1><b>Admin Dashboard</b></h1> -->
-    <!-- Message and Quote -->
-    <div class="message">
-        <h1>Welcome, {{ username }}!</h1> <br><br> 
-        Manage the system efficiently and effectively to keep everything running smoothly.
-    </div><br><br>
-    <div class="quote">
-        Leadership is not about being in charge, but about taking care of those in your charge.
-    </div><br><br><br><br><br><br><br><br><br><br><br><br>
+    <center>
+        <div class="message">
+            <h1>Welcome, {{ username }}!</h1> <br><br> 
+            Manage the system efficiently and effectively to keep everything running smoothly.
+        </div><br><br>
+        <div class="quote">
+            Leadership is not about being in charge, but about taking care of those in your charge.
+        </div><br><br><br><br><br><br><br><br><br><br><br><br>
 
-<footer>
-    <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
-</footer>
+        <footer>
+            <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
+        </footer>
+    </center>
 
-</center>
+    <!-- JavaScript to toggle the side navigation -->
+    <script>
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
+
 </body>
 </html>
