--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -13,14 +13,23 @@
     </style>
 </head>
 <body>
+
+    <!-- Side Navigation -->
+    <div id="mySidenav" class="sidenav">
+        <a>Hi! {{ username }}</a><br><br>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br>
+        <a href="{% url 'custproductslist' %}">Products List</a><br>
+        <a href="#">Your Orders</a><br>
+        <a href="{% url 'feedbackpage' %}">Your Feedback</a><br>
+    </div>
+
     <!-- Navigation Bar -->
     <ul>
         <div class="header">
-            <!-- Greeting with username on the left 
-            <div class="nav-item left">
-                <li><b>Hi, {{ username }}</b></li>
-            </div> -->
-            <div class="nav-item">
+            <!-- Hamburger Icon -->
+            <span class="hamburger" onclick="openNav()">&#9776;</span>
+
+            <!-- <div class="nav-item">
                 <li><b><a href="{% url 'custproductslist' %}">Products list</a></b></li>
             </div>
             <div class="nav-item">
@@ -28,7 +37,8 @@
             </div>
             <div class="nav-item">
                 <li><b><a href="{% url 'feedbackpage' %}">Your Feedback</a></b></li>
-            </div>
+            </div> -->
+            
             <div class="nav-item">
                 <li>
                     <b><a href="#">{{ username }}</a></b>
@@ -58,4 +68,17 @@
 </footer>
 
     </center>
+
+    <!-- JavaScript to toggle the side navigation -->
+    <script>
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
+
 </body>
+</html>
