--- a/Dairy_Care_System/templates/custproductslist.html
+++ b/Dairy_Care_System/templates/custproductslist.html
@@ -37,6 +37,15 @@
     </div>
 </ul>
 
+<!-- Search Bar -->
+<center>
+<div class="search-bar-container">
+    <form method="GET" action="{% url 'custproductslist' %}">
+        <input type="text" name="search" class="search-bar" placeholder="Search for products..." value="{{ request.GET.search|default_if_none:'' }}">
+        <button type="submit" class="search-button">Search</button>
+    </form>
+</div></center>
+
 <div class="products-container">
     {% for product in products %}
         <div class="product" onclick="window.location.href='{% url 'productdetails' product.product_id %}'" style="cursor: pointer;">
