--- a/Dairy_Care_System/templates/employeepage.html
+++ b/Dairy_Care_System/templates/employeepage.html
@@ -13,29 +13,35 @@
     </style>
 </head>
 <body>
-    <!-- <a href="{% url 'home' %}" class="home-link">
-        <img src="{% static 'images/homeblack.jpg' %}" alt="Home">
-    </a> -->
+    
+    <!-- Side Navigation -->
+    <div id="mySidenav" class="sidenav">
+        <a>Hi! {{ username }}</a><br><br>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br>
+        <a href="{% url 'productslist' %}">Products List</a><br>
+        <a href="{% url 'animalslist' %}">Animals List</a><br>
+        <a href="#">Milk Details</a><br>
+        <a href="#">Feedback Review</a>
+    </div>
 
 <!-- Navigation Bar-->
 <ul>
     <div class="header">
-        <!-- Greeting with username on the left
-        <div class="nav-item left">
-            <li><b>Hi, {{ username }}</b></li>
-        </div>   -->
-        <div class="nav-item">
+            <!-- Hamburger Icon -->
+            <span class="hamburger" onclick="openNav()">&#9776;</span>
+
+        <!-- <div class="nav-item">
             <li><b><a href="{% url 'productslist' %}">Products list</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="#">Animals list</a></b></li>
+            <li><b><a href="{% url 'animalslist' %}">Animals list</a></b></li>
         </div>
         <div class="nav-item">
             <li><b><a href="#">Milk details</a></b></li>
         </div>
         <div class="nav-item">
             <li><b><a href="#">Equipments details</a></b></li>
-        </div>
+        </div> -->
         <div class="nav-item">
             <li>
                 <b><a href="#">{{ username }}</a></b>
@@ -64,5 +70,17 @@
 </footer>
 
 </center>
+
+<!-- JavaScript to toggle the side navigation -->
+<script>
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+    }
+
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+    }
+</script>
+
 </body>
 </html>
