--- a/Dairy_Care_System/templates/addanimal.html
+++ b/Dairy_Care_System/templates/addanimal.html
@@ -15,6 +15,9 @@
         }
 
         body {
+            background: url('{% static "images/addanimals.jpg" %}') no-repeat center center fixed;
+            background-size: cover;
+            margin: 0;
             font-family: 'Arial', sans-serif;
             background: linear-gradient(135deg, #f0f0f0, #e2e2e2);
             display: flex;
