--- a/Dairy_Care_System/templates/editproduct.html
+++ b/Dairy_Care_System/templates/editproduct.html
@@ -27,7 +27,7 @@
                 <b><a href="#">{{ username }}</a></b>
                 <div class="dropdown-content">
                     <a href="{% url 'userprofile' %}">Profile</a>
-                    <a href="{% url 'adminpage' %}">Back</a>
+                    <a href="{% url 'productslist' %}">Back</a>
                     <a href="{% url 'logout' %}">Logout</a>
                 </div>
             </li>
