--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -22,6 +22,7 @@
         <a href="{% url 'productslist' %}">Products List</a><br>
         <a href="{% url 'animalslist' %}">Animals List</a><br>
         <a href="#">Milk Details</a><br>
+        <a href="#">Equipment Details</a><br>
         <a href="#">Feedback Review</a><br>
     </div>
 
