--- a/Dairy_Care_System/templates/employeepage.html
+++ b/Dairy_Care_System/templates/employeepage.html
@@ -21,7 +21,7 @@
         <a href="{% url 'productslist' %}">Products List</a><br>
         <a href="{% url 'animalslist' %}">Animals List</a><br>
         <a href="#">Milk Details</a><br>
-        <a href="#">Feedback Review</a>
+        <a href="#">Equipment Details</a>
     </div>
 
 <!-- Navigation Bar-->
